# HearMeWatch

./: README.md  settings.gradle.kts
app/: build.gradle.kts  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: edgeImpulse_label_list.txt  trained.tflite
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/res/drawable/: bg_attention_circle.xml  bg_contact_message.xml  bg_info_box_blue.xml  bg_info_box_green.xml  bg_menu_item_blue.xml  bg_notice_message.xml  bg_step_number_blue.xml  bg_step_number_purple.xml  bg_user_avatar.xml  bg_user_card.xml  bullet_green.xml  circle_purple.xml  dot_gray.xml  frame_outline.xml  frame_white.xml  ic_back.xml  ic_civil_defense.xml  ic_google.xml  ic_guide1.xml  ic_intercom.xml  ic_logout.xml  ic_name_calling.xml  ic_preferences.xml  ic_privacy.xml  ic_profile.xml  ic_sidebar.xml  ic_stop.xml
app/src/main/res/layout/: activity_guide.xml  activity_home.xml  activity_login.xml  activity_main.xml  activity_perferences.xml  activity_preferences.xml  activity_profile.xml  activity_with_drawer.xml  bullet_view.xml  drawer_header_view.xml  fragment_list.xml  item_preference.xml  item_vibration.xml  page_header_view.xml  popup_contact_info.xml  popup_name_calling_info.xml  preference_layout.xml  step_view.xml
app/src/main/res/menu/: drawer_menu.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
wearos/: build.gradle.kts
wearos/src/main/: AndroidManifest.xml
wearos/src/main/res/drawable/: ic_ambulance.xml  ic_baby_crying.xml  ic_car_horn.xml  ic_dog.xml  ic_fire_alarm.xml
wearos/src/main/res/layout/: activity_main.xml
wearos/src/main/res/values/: strings.xml
(+46 files in other folders)
